# mistwood

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: enhancement.yml
.github/actions/build-docs/: action.yml
.github/workflows/: book.yml  code_coverage.yml  continuous_integration.yml
READMEs/: README.md  architecture.md  code_style.md  component_catalog.md  definition_of_done.md  messages.md
READMEs/brainstorming/: cool_words.md  dwarves_goblins_and_underdark.md  idea_dump.md  major_components.md  messages.md
READMEs/random_articles/: data_design_requirements.md  mud_parsing.md  parser_thoughts.md  things_inform_does.md
benches/: fibonacci.rs  string_templating.rs
docs/: book.toml
docs/src/: SUMMARY.md
examples/: mistdemo.rs
examples/mork/: README.md  game_state.rs  main.rs  message_templates.rs
examples/mork/zork-i/: gverbs.zil  (+1 more)
git/hooks/: pre-commit
hooks/: pre-commit
scripts/: build_docs.sh
src/: _types.rs  commands.rs  di.rs  game_loop.rs  game_state.rs  input.rs  lib.rs  messaging.rs  output.rs  prng.rs
src/_types/: type_map.rs
src/commands/: traits.rs
src/di/: _error.rs  _traits.rs  _types.rs  container.rs  traits.rs
src/game_loop/: traits.rs
src/game_state/: _traits.rs
src/input/: _errors.rs  _traits.rs  input.rs  sources.rs
src/macros/: mod.rs
src/messaging/: _error.rs  _macros.rs  _traits.rs  error.rs  gravity.rs  macros.rs  message.rs  stock_templates.rs  template.rs  template_processor.rs  template_provider.rs  template_provider_registry.rs  traits.rs
src/output/: _traits.rs  output.rs  sinks.rs
src/prng/: _traits.rs  _types.rs  factory.rs  registry.rs  types.rs
src/rules_engine/: mod.rs
src/types/: type_map.rs
(+202 files in other folders)
