[package]
name = "mistwood"
version = "0.0.1"
edition = "2021"
authors = ["Nathan Douglas <github@darkdell.net>"]
license = "Unlicense"
homepage = "https://ndouglas.github.io/mistwood/"
repository = "https://github.com/ndouglas/mistwood/"
documentation = "https://ndouglas.github.io/mistwood/"
readme = "README.md"
keywords = ["mistwood"]

[lib]
name = "mistwood"
path = "src/lib.rs"

[[example]]
name = "mistdemo"
path = "examples/mistdemo.rs"

[[example]]
name = "mork"
path = "examples/mork/main.rs"

[dependencies]
actix = "0.13.3"
all_asserts = "2.3.1"
anyhow = { version = "1.0.81", features = ["backtrace"] }
derivative = "2.2.0"
derive_builder = "0.20.0"
derive_more = "0.99.17"
futures = "0.3.30"
handlebars = "5.1.2"
hecs = { version = "0.10.4", features = ["hecs-macros", "serde"] }
log = "0.4.21"
mlua = { version = "0.9.6", features = [
  "async",
  "lua54",
  "serialize",
  "vendored",
] }
mockall = "0.12.1"
paste = "1.0.14"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["alloc", "derive", "std"] }
serde_json = "1.0.114"
serde_unit_struct = "0.1.3"
serde_yaml = "0.9.34"
shrev = "1.1.3"
simplelog = "0.12.2"
specs = { version = "0.20.0", features = ["derive", "serde", "shred-derive"] }
strum = { version = "0.26.2", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.58"
typetag = "0.2.16"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "string_templating"
harness = false
